--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: okteuioy
+  name: okiugyu
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "okteuioy"
+  - name: "okiugyu"
     port: 8080
   selector:
-    app: okteuioy
+    app: okiugyu
