--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: okiugyu
+  name: mnhpiusdf
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "okiugyu"
+  - name: "mnhpiusdf"
     port: 8080
   selector:
-    app: okiugyu
+    app: mnhpiusdf
